[metadata]
name = face-server-Rubix982
version = 0.0.1
author = Saif Ul Islam, Ali Azlan, Ahmed Khan, Rafay Tariq, Shams Lalwani
author_email = saifulislam84210@gmail.com
description = The server package for the Face project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rubix982/Face
project_urls =
    Bug Tracker = https://github.com/Rubix982/Face/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src