[metadata]
name = pupiilview
version = 0.0.4
author = Saif Ul Islam, Ali Azlan, Ahmed Khan, Rafay Tariq, Shams Lalwani
author_email = saifulislam84210@gmail.com, aliazlan2002@gmail.com, muhammadahmed3210@gmail.com, abdulrafay03@gmail.com, shamlalwani52@gmail.com
description = The view package for the Pupiil project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Pupiil/view
project_urls =
    Bug Tracker = https://github.com/Pupiil/view/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src